# inflammation-analysis

./: .gitignore  README.md  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
inflammation/: models.py  views.py
tests/: test_models.py  test_patient.py
